--- a/index.html
+++ b/index.html
@@ -1775,13 +1775,14 @@
     <!-- Floating Background Particles -->
     <div class="floating-particles" id="particles"></div>
     
-<body>
-  <!-- Navigation -->
-  <nav class="navbar">
-    <div class="nav-container">
-      <a href="#home" class="nav-logo">
-        <i class="fas fa-tools"></i> WishaImage
-      </a>
+    <!-- Header & Navigation -->
+    <header>
+        <div class="container nav-container">
+            <!-- Logo is now a clickable link to home -->
+            <a href="#home" class="logo">
+                <i class="fas fa-gift"></i>
+                WishaImage
+            </a>
             
             <button class="mobile-menu-btn" id="mobileMenuBtn">
                 <i class="fas fa-bars"></i>
